<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarSize="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encueta"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txbNombre"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apellido"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txbApellido"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txbEdad"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipos"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chkCarnes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carnes"
                android:textSize="19dp" />

            <CheckBox
                android:id="@+id/ckPastas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pasta"
                android:textSize="19dp" />

            <CheckBox
                android:id="@+id/ckEnsalada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ensaladas"
                android:textSize="19dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:text="@string/respreferido"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spRestaurantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/restaurantespresferidos" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Enviar" />

</LinearLayout>